@@ -13,6 +13,8 @@ vNEXT (in development)
     * Added MotdFinished event
     * Added UserAccountChanged event
     * Added ChannelUserKicked event
+    * Added NoticeReceived event
+    * Added CtcpReplyReceived event
  * Improved some documentation
 
 v0.4.0
